Cleanup usage Immutable*.of #7723